[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/admin/ban_list_dialog.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="panel_style"]
bg_color = Color(0.184, 0.192, 0.212, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8
content_margin_left = 24.0
content_margin_top = 20.0
content_margin_right = 24.0
content_margin_bottom = 20.0

[node name="BanListDialog" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)
mouse_filter = 0
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(440, 0)
theme_override_styles/panel = SubResource("panel_style")

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bans"
theme_override_font_sizes/font_size = 20

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/VBox/Header"]
layout_mode = 2
text = "âœ•"
flat = true

[node name="SearchInput" type="LineEdit" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 32)
placeholder_text = "Search..."

[node name="BulkBar" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="SelectAllCheck" type="CheckBox" parent="CenterContainer/Panel/VBox/BulkBar"]
layout_mode = 2
text = "Select All"

[node name="Spacer" type="Control" parent="CenterContainer/Panel/VBox/BulkBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BulkUnbanBtn" type="Button" parent="CenterContainer/Panel/VBox/BulkBar"]
visible = false
layout_mode = 2
text = "Unban Selected"
flat = true
theme_override_colors/font_color = Color(0.345, 0.396, 0.949, 1)

[node name="Scroll" type="ScrollContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 240)

[node name="BanList" type="VBoxContainer" parent="CenterContainer/Panel/VBox/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="LoadMoreButton" type="Button" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
text = "Load More"
flat = true
theme_override_colors/font_color = Color(0.345, 0.396, 0.949, 1)

[node name="EmptyLabel" type="Label" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
text = "No bans."
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="ErrorLabel" type="Label" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.3, 0.3, 1)
autowrap_mode = 2
